# Kenzie-Academy-Q4

Bugs/: pyproject.toml
Capstone/: .gitignore  pyproject.toml
Capstone/Stocker/: .gitignore  manage.py
Capstone/Stocker/Stocker/: asgi.py  settings.py  urls.py  wsgi.py
Capstone/Stocker/Stocker/templates/: 404.html  500.html  about.html  analysis.html  base.html  basic_form.html  buy.html  index.html  profile.html  sell.html  sign_up_form.html
Capstone/Stocker/portfolio/: admin.py  models.py
Capstone/Stocker/portfolio/migrations/: 0001_initial.py
Capstone/Stocker/site_users/: admin.py  forms.py  helpers.py  models.py  tests.py  urls.py  views.py
Capstone/Stocker/site_users/migrations/: 0001_initial.py  0002_auto_20200418_2303.py
GhostPost-React/: .gitignore  pyproject.toml
GhostPost-React/client/public/: index.html
GhostPost-React/client/src/: App.js
GhostPost-React/client/src/components/: AllPosts.js  Boasts.js  NewPostForm.js  Roasts.js  index.js
GhostPost-React/server/ghostpost/: forms.py  models.py  serializers.py  settings.py  urls.py  views.py
GhostPost-React/server/ghostpost/migrations/: 0001_initial.py  0002_auto_20200323_1548.py
TwitterClone/: pyproject.toml
TwitterClone/twitterclone/authentication/: forms.py  urls.py  views.py
TwitterClone/twitterclone/notification/: models.py  urls.py  views.py
TwitterClone/twitterclone/tweet/: forms.py  models.py  urls.py  views.py
TwitterClone/twitterclone/twitterclone/: settings.py  urls.py  views.py
TwitterClone/twitterclone/twitteruser/: admin.py  models.py  urls.py  views.py
(+104 files in other folders)
